data/derived/fa15/progs/unify/prog2194.ml.out
Characters 17-18:
  let _ = isFPoint 1 = 1;;
                   ^
Error: This expression has type int but an expression was expected of type
         int -> int
